--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "license": "ISC",
     "dependencies": {
         "express": "^4.17.2",
-        "express-handlebars": "^6.0.2"
+        "express-handlebars": "^6.0.2",
+        "pug": "^3.0.2"
     },
     "devDependencies": {
         "nodemon": "^2.0.15"
