--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
+        "ejs": "^3.1.6",
         "express": "^4.17.2",
         "express-handlebars": "^6.0.2",
         "pug": "^3.0.2"
